@@ -11197,7 +11197,6 @@ WARNING: ensure you have a good reason to change this value because it may degra
                     </child>
                     <child>
                       <object class="GtkMenuItem" id="menuitem_IPS">
-                        <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="label" translatable="yes">Image Plate Solver...</property>
                         <property name="use_underline">True</property>
