@@ -7,6 +7,7 @@ Stability update for v0.9.9
 * Scripts with Windows end of line (CR+LF) are now usable
 * Added RGB flat normalisation for CFA images and command GREY_FLAT
 * Added command SETFINDSTAR to define sigma and roundness parameters
+* Make command SEQCROP scriptable
 * New astrometric tool
 * Improved global registration and fixed a bug
 * Fixed crash on startup on Windows with a session owning a wide char
